// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormError /> should render the form error component 1`] = `
<Text
  accessibility="Erro testing error"
  accessibilityLabel="Erro testing error"
  centered={false}
  large={true}
  lineHeightVariant="min"
  style={
    Array [
      Object {
        "color": "#000000",
        "fontSize": 14,
        "lineHeight": 14,
      },
      Object {
        "color": "#cc0000",
        "marginTop": 0,
        "textAlign": "left",
      },
    ]
  }
  testID="error_"
  variant="sm"
>
  testing error
</Text>
`;

exports[`<FormError /> should render the form error component with centered 1`] = `
<Text
  accessibility="Erro testing error"
  accessibilityLabel="Erro testing error"
  centered={true}
  large={true}
  lineHeightVariant="min"
  style={
    Array [
      Object {
        "color": "#000000",
        "fontSize": 14,
        "lineHeight": 14,
      },
      Object {
        "color": "#cc0000",
        "marginTop": 0,
        "textAlign": "center",
      },
    ]
  }
  testID="error_"
  variant="sm"
>
  testing error
</Text>
`;

exports[`<FormError /> should render the form error component with error 1`] = `null`;
